--- a/pyproject.toml
+++ b/pyproject.toml
@@ -29,6 +29,14 @@ pyyaml = { version = "^6.0", optional = true }
 pyzotero = { version = "^1.5", optional = true }
 requests = { version = "^2.32", optional = true }
 
+[tool.poetry.group.docs]
+optional = true
+
+[tool.poetry.group.docs.dependencies]
+mkdocs = "^1.6.1"
+mkdocs-material = "^9.5.48"
+mkdocstrings-python = "^1.12.2"
+
 [tool.poetry.extras]
 reader = ["python-dateutil", "requests"]
 resume = ["beautifulsoup4", "pydantic", "pyyaml", "requests"]
